// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    11
     
    expenses
     totaling 
    55445.12
  </h1>
</div>
`;

exports[`should correctly render expensesSummary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    05.12
  </h1>
</div>
`;
